test/neg/e202-duplicate-keyword-in-struct.tel
tel 1.0 https://tel-lang.org/schema/tel-schema

name e202-test

document
  field foo required
    scalar string
  field foo
    scalar string
